[gd_scene load_steps=3 format=3 uid="uid://c4idgtt4cu7we"]

[ext_resource type="Script" path="res://Pause.gd" id="1_qtam6"]
[ext_resource type="Texture2D" uid="uid://drnmuxydbhkjb" path="res://GameAssets/fence.png" id="2_0g7ab"]

[node name="Pause" type="Node2D"]
script = ExtResource("1_qtam6")

[node name="Pause Menu" type="CanvasLayer" parent="."]
visible = false

[node name="Options" type="Button" parent="Pause Menu"]
offset_left = 428.0
offset_top = 60.0
offset_right = 644.0
offset_bottom = 152.0
text = "Options"

[node name="Main menu" type="Button" parent="Pause Menu"]
offset_left = 444.0
offset_top = 186.0
offset_right = 656.0
offset_bottom = 298.0
text = "Main menu"

[node name="Quit" type="Button" parent="Pause Menu"]
offset_left = 442.0
offset_top = 326.0
offset_right = 670.0
offset_bottom = 436.0
text = "Quit"

[node name="Options_Menu" type="CanvasLayer" parent="."]
visible = false

[node name="Controls" type="Button" parent="Options_Menu"]
offset_left = 445.0
offset_top = 61.0
offset_right = 673.0
offset_bottom = 168.0
text = "Controls"

[node name="Inventory" type="CanvasLayer" parent="."]
visible = false

[node name="Fence" type="Sprite2D" parent="Inventory"]
position = Vector2(961, 567.5)
scale = Vector2(61.125, 18.4844)
texture = ExtResource("2_0g7ab")

[connection signal="button_down" from="Pause Menu/Options" to="." method="_on_Options_button_down"]
[connection signal="button_down" from="Pause Menu/Main menu" to="." method="_on_Main_menu_button_down"]
[connection signal="button_down" from="Pause Menu/Quit" to="." method="_on_Quit_button_down"]
